<?xml version="1.0"?>
<package format="2">
  <name>collision_checker_rtc</name>
  <version>0.0.0</version>
  <description>The collision_checker_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>geometry_msgs</depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_vclip</depend>
  <depend>choreonoid_qhull</depend>
</package>
