<?xml version="1.0"?>
<package format="2">
  <name>collision_checker_msgs</name>
  <version>0.0.0</version>
  <description>The collision_checker_msgs package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>geometry_msgs</depend>

</package>
