<?xml version="1.0"?>
<package format="2">
  <name>collision_checker_tools</name>
  <version>0.0.0</version>
  <description>The collision_checker_tools package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>geometry_msgs</depend>
  <depend>choreonoid</depend>

  <depend>collision_checker_msgs</depend>
</package>
