<?xml version="1.0"?>
<package format="2">
  <name>octomap_collision_check</name>
  <version>0.0.0</version>
  <description>The octomap_collision_check package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>octmap_msgs</depend>
  <depend>octmap_ros</depend>
  <depend>moveit_core</depend>
  <depend>collision_checker_msgs</depend>
</package>
